integrating user registration API

--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -336,7 +336,7 @@
                 <div class="related-product_bottom">
                   <div class="row no-gutters-sm">
                     <div class="col-6 col-md-4 col-lg-3 col-xxl-2">
-                      <div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product02.png" alt=""></a>
+                      <div class="product"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product02.png" alt=""></a>
                         <h5 class="product-type">Oranges</h5>
                         <h3 class="product-name">Pure Pineapple</h3>
                         <h3 class="product-price">NGR 14.00 
@@ -351,7 +351,7 @@
                       </div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 col-xxl-2">
-                      <div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product03.png" alt=""></a>
+                      <div class="product"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product03.png" alt=""></a>
                         <h5 class="product-type">Oranges</h5>
                         <h3 class="product-name">Apple</h3>
                         <h3 class="product-price">NGR 30.00
@@ -366,7 +366,7 @@
                       </div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 col-xxl-2">
-                      <div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product04.png" alt=""></a>
+                      <div class="product"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product04.png" alt=""></a>
                         <h5 class="product-type">Oranges</h5>
                         <h3 class="product-name">Pure Pineapple</h3>
                         <h3 class="product-price">NGR 14.00 
@@ -381,7 +381,7 @@
                       </div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 col-xxl-2">
-                      <div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product05.png" alt=""></a>
+                      <div class="product"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product05.png" alt=""></a>
                         <h5 class="product-type">Oranges</h5>
                         <h3 class="product-name">Pure Pineapple</h3>
                         <h3 class="product-price">NGR 14.00 
@@ -396,7 +396,7 @@
                       </div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 col-xxl-2">
-                      <div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product06.png" alt=""></a>
+                      <div class="product"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product06.png" alt=""></a>
                         <h5 class="product-type">Oranges</h5>
                         <h3 class="product-name">Pure Pineapple</h3>
                         <h3 class="product-price">NGR 14.00 
@@ -411,7 +411,7 @@
                       </div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 col-xxl-2">
-                      <div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product07.png" alt=""></a>
+                      <div class="product"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product07.png" alt=""></a>
                         <h5 class="product-type">Oranges</h5>
                         <h3 class="product-name">Apple</h3>
                         <h3 class="product-price">NGR 30.00
