--- a/shop.html
+++ b/shop.html
@@ -312,7 +312,7 @@
                     <div class="row no-gutters-sm">
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product01.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -345,7 +345,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product02.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product02.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -378,7 +378,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product03.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product03.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -409,7 +409,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product04.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product04.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -440,7 +440,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product05.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product05.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -471,7 +471,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product06.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product06.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -502,7 +502,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product07.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product07.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -533,7 +533,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product08.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product08.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -564,7 +564,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product09.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product09.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -595,7 +595,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product10.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product10.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -626,7 +626,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product11.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product11.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
@@ -657,7 +657,7 @@
                       </div>
                       <div class="col-6 col-md-4">
                         <div class="product">
-                          <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product12.png" alt=""></a>
+                          <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product12.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
