--- a/userwelcome.html
+++ b/userwelcome.html
@@ -340,7 +340,7 @@
                     <div class="row no-gutters-sm">
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product01.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -373,7 +373,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product02.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product02.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -406,7 +406,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product03.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product03.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -437,7 +437,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product04.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product04.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -468,7 +468,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product05.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product05.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -499,7 +499,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product06.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product06.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -530,7 +530,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product07.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product07.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -561,7 +561,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product08.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product08.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -592,7 +592,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product09.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product09.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -623,7 +623,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product10.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product10.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -654,7 +654,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product11.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product11.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
@@ -685,7 +685,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="product">
-                        <div class="product-img_block"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product12.png" alt=""></a>
+                        <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product12.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                         </div>
                         <div class="product-info_block">
