integrating user registration API

--- a/shop.html
+++ b/shop.html
@@ -316,7 +316,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -349,7 +349,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -382,7 +382,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -413,7 +413,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -444,7 +444,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -475,7 +475,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -506,7 +506,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -537,7 +537,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -568,7 +568,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -599,7 +599,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -630,7 +630,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
@@ -661,7 +661,7 @@
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
                           <div class="product-info_block">
-                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
+                            <h5 class="product-type">Oranges</h5><a class="product-name" href="shop_detail_fullwidth.html">Pure Pineapple</a>
                             <h3 class="product-price">NGR 14.00 
                               <del>NGR 35.00</del>
                             </h3>
