--- a/shop_checkout.html
+++ b/shop_checkout.html
@@ -108,7 +108,7 @@
                           <ul class="sub-menu">
                             <li><a href="login.html">login</a></li>
                             <li><a href="register.html">register</a></li>
-                            <li><a href="FAQ.htmll">FAQ</a></li>
+                            <li><a href="FAQ.html">FAQ</a></li>
                            
                             <li><a href="about_us.html">about us</a></li>
                             <li><a href="contact_us.html">contact us</a></li>
