integrating user registration API

--- a/login.html
+++ b/login.html
@@ -226,7 +226,7 @@
                       </ul>
                     </li>
                    
-                    <li class="toggleable"> <a class="menu-item active" href="#">Pages</a>
+                    <li class="toggleable"> <a class="menu-item active" href="javascript:void()">Pages</a>
                       <ul class="sub-menu">
                         <li><a href="login.html">login</a></li>
                         <li><a href="register.html">register</a></li>
@@ -248,7 +248,7 @@
           <div class="container">
             <div class="row">
               <div class="col-3">
-                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="#"><i class="fas fa-bars"></i></a>
+                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="javascript:void()"><i class="fas fa-bars"></i></a>
                   <div id="ogami-mobile-menu">
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
@@ -261,7 +261,7 @@
                            </ul>
                         </li>
                        
-                        <li class="toggleable"><a class="menu-item" href="#">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"><a class="menu-item" href="javascript:void()">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="login.html">login</a></li>
                             <li><a href="register.html">register</a></li>
@@ -298,7 +298,7 @@
         <div class="container">
           <ul>
             <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
-            <li> <a class="breadcrumb-link active" href="#">Login</a></li>
+            <li> <a class="breadcrumb-link active" href="javascript:void()">Login</a></li>
           </ul>
         </div>
       </div>
@@ -322,7 +322,7 @@
                     <input id="savepass" type="checkbox">
                     <label for="savepass">Save Password</label>
                   </div>
-                  <div class="account-forgot"><a href="#">Forget your Password</a></div>
+                  <div class="account-forgot"><a href="javascript:void()">Forget your Password</a></div>
                 </div>
                 <div class="account-function">
                   <a href="/index.html"><button class="no-round-btn" type="submit" onClick="myFunction()">Sign in</button></a><a class="create-account" href="register.html">Or create an account</a>
