--- a/404_error.html
+++ b/404_error.html
@@ -81,7 +81,7 @@
                       </ul>
                     </li>
                    
-                    <li class="toggleable"> <a class="menu-item active" href="#">Pages</a>
+                    <li class="toggleable"> <a class="menu-item active" href="javascript:void()">Pages</a>
                       <ul class="sub-menu">
                         <li><a href="login.html">login</a></li>
                         <li><a href="register.html">register</a></li>
@@ -108,7 +108,7 @@
           <div class="container">
             <div class="row">
               <div class="col-3">
-                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="#"><i class="fas fa-bars"></i></a>
+                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="javascript:void()"><i class="fas fa-bars"></i></a>
                   <div id="ogami-mobile-menu">
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
@@ -122,7 +122,7 @@
                                          </ul>
                         </li>
                         
-                        <li class="toggleable"><a class="menu-item" href="#">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"><a class="menu-item" href="javascript:void()">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="login.html">login</a></li>
                             <li><a href="register.html">register</a></li>
@@ -221,7 +221,7 @@
         <div class="container">
           <ul>
             <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
-            <li> <a class="breadcrumb-link active" href="#">404 Error</a></li>
+            <li> <a class="breadcrumb-link active" href="javascript:void()">404 Error</a></li>
           </ul>
         </div>
       </div>
