--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -91,7 +91,7 @@
               </ul>
             </li>
           
-            <li class="toggleable"> <a class="menu-item" href="#">Pages</a>
+            <li class="toggleable"> <a class="menu-item" href="javascript:void()">Pages</a>
               <ul class="sub-menu">
                 <li><a href="login.html">login</a></li>
                 <li><a href="register.html">register</a></li>
@@ -117,7 +117,7 @@
   <div class="container">
     <div class="row">
       <div class="col-3">
-        <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="#"><i class="fas fa-bars"></i></a>
+        <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="javascript:void()"><i class="fas fa-bars"></i></a>
           <div id="ogami-mobile-menu">
             <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
             <div class="mobile-menu_items">
@@ -131,7 +131,7 @@
                                      </ul>
                 </li>
                 
-                <li class="toggleable"><a class="menu-item" href="#">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                <li class="toggleable"><a class="menu-item" href="javascript:void()">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                   <ul class="sub-menu">
                     <li><a href="login.html">login</a></li>
                     <li><a href="register.html">register</a></li>
