--- a/userwelcome.html
+++ b/userwelcome.html
@@ -69,7 +69,7 @@
                     </ul>
                     </li>
                    
-                    <li class="toggleable"> <a class="menu-item" href="#">Pages</a>
+                    <li class="toggleable"> <a class="menu-item" href="javascript:void()">Pages</a>
                     <ul class="sub-menu">
                         <li><a href="login.html">login</a></li>
                         <li><a href="register.html">register</a></li>
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row">
             <div class="col-3">
-                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="#"><i class="fas fa-bars"></i></a>
+                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="javascript:void()"><i class="fas fa-bars"></i></a>
                 <div id="ogami-mobile-menu">
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
