integrating user registration API

--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -86,7 +86,7 @@
                   <li><a href="shop_order_complete.html">order complete</a></li>
                   <li><a href="shop_wishlist.html">wishlist</a></li>
                   <li><a href="shop_compare.html">compare</a></li>
-                  <li><a href="_">cart</a></li>
+                  <li><a href="shop_cart.html">cart</a></li>
                 </div>
               </ul>
             </li>
