--- a/404_error.html
+++ b/404_error.html
@@ -33,13 +33,13 @@
               </div>
               <div class="col-12 col-md-6">
                 <div class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
-                  <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
+                  <div class="social-link d-flex"><a href="javascript:void()"><i class="fab fa-facebook-f"> </i></a><a href="javascript:void()"><i class="fab fa-twitter"></i></a><a href="javascript:void()"><i class="fab fa-invision"> </i></a><a href="javascript:void()"><i class="fab fa-pinterest-p"> </i></a></div>
                   <div class="language">
-                    <div class="selected-language"><img src="assets/images/homepage01/usa.jpg" alt="">English<i class="arrow_carrot-down"></i>
+                    <div class="selected-language"><img src="assets/images/homepage01/usa.jpg" alt="javascript:void()">English<i class="arrow_carrot-down"></i>
                       <ul class="list-language">
-                        <li><img src="assets/images/homepage01/usa.jpg" alt="">English</li>
-                        <li><img src="assets/images/homepage01/usa.jpg" alt="">Spain</li>
-                        <li><img src="assets/images/homepage01/usa.jpg" alt="">Japan</li>
+                        <li><img src="assets/images/homepage01/usa.jpg" alt="javascript:void()">English</li>
+                        <li><img src="assets/images/homepage01/usa.jpg" alt="javascript:void()">Spain</li>
+                        <li><img src="assets/images/homepage01/usa.jpg" alt="javascript:void()">Japan</li>
                       </ul>
                     </div>
                   </div>
@@ -52,7 +52,7 @@
         <nav class="navigation d-flex align-items-center">
           <div class="container">
             <div class="row">
-              <div class="col-2"><a class="logo" href="index.html"><img src="assets/images/logo.png" alt=""></a></div>
+              <div class="col-2"><a class="logo" href="index.html"><img src="assets/images/logo.png" alt="javascript:void()"></a></div>
               <div class="col-8">
                 <div class="navgition-menu d-flex align-items-center justify-content-center">
                   <ul class="mb-0">
@@ -97,8 +97,8 @@
               </div>
               <div class="col-2">
                 <div class="product-function d-flex align-items-center justify-content-end">
-                  <div id="wishlist"><a class="function-icon icon_heart_alt" href=""></a></div>
-                  <div id="cart"><a class="function-icon icon_bag_alt" href=""><span>#150.00</span></a></div>
+                  <div id="wishlist"><a class="function-icon icon_heart_alt" href="javascript:void()"></a></div>
+                  <div id="cart"><a class="function-icon icon_bag_alt" href="javascript:void()"><span>#150.00</span></a></div>
                 </div>
               </div>
             </div>
@@ -138,13 +138,13 @@
                     <div class="mobile-login">
                       <h2>My account</h2><a href="login.html">Login</a><a href="register.html">Register</a>
                     </div>
-                    <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
+                    <div class="mobile-social"><a href="javascript:void()"><i class="fab fa-facebook-f"> </i></a><a href="javascript:void()"><i class="fab fa-twitter"></i></a><a href="javascript:void()"><i class="fab fa-invision"> </i></a><a href="javascript:void()"><i class="fab fa-pinterest-p"> </i></a></div>
                   </div>
                   <div class="ogamin-mobile-menu_bg"></div>
                 </div>
               </div>
               <div class="col-6">
-                <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
+                <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href="javascript:void()"><img src="assets/images/logo.png" alt="javascript:void()"></a></div>
               </div>
               <div class="col-3">
                 <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
@@ -243,13 +243,13 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-sm-12 col-md-4 text-sm-center text-md-left">
-              <div class="footer-logo"><img src="assets/images/logo.png" alt=""></div>
+              <div class="footer-logo"><img src="assets/images/logo.png" alt="javascript:void()"></div>
               <div class="footer-contact">
                 <p>Address: S01, Pathfield mall, Beside Rainoil Filling Station, 4th Avenue,Gwarimpa, Abuja, F.C.T</p>
                 <p>Phone: +234456789999</p>
                 <p>Email: info@gmail.com</p>
               </div>
-              <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-pinterest-p"></i></a></div>
+              <div class="footer-social"><a class="round-icon-btn" href="javascript:void()"><i class="fab fa-facebook-f"> </i></a><a class="round-icon-btn" href="javascript:void()"><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href="javascript:void()"><i class="fab fa-invision"> </i></a><a class="round-icon-btn" href="javascript:void()"><i class="fab fa-pinterest-p"></i></a></div>
             </div>
             <div class="col-md-8">
               <div class="row">
@@ -293,7 +293,7 @@
         <div class="footer-credit">
           <div class="container">
             <div class="footer-creadit_block d-flex flex-column flex-md-row justify-content-start justify-content-md-between align-items-baseline align-items-md-center">
-              <p class="author">Copyright © 2020 IntrioBasket - All Rights Reserved.</p><img class="payment-method" src="assets/images/payment.png" alt="">
+              <p class="author">Copyright © 2020 IntrioBasket - All Rights Reserved.</p><img class="payment-method" src="assets/images/payment.png" alt="javascript:void()">
             </div>
           </div>
         </div>
