integrating user registration API

--- a/login.html
+++ b/login.html
@@ -160,7 +160,7 @@
 
     </script>-->
 
-    <script>
+   <!--<script>
 
     function myFunction() {
      
@@ -169,6 +169,8 @@
       }
 
       </script>
+
+      -->
   
 
    
@@ -308,7 +310,7 @@
           <div class="row">
             <div class="col-12 col-md-6 mx-auto" id="containerr">
               <h1 class="title">Login</h1>
-              <form id="form" method="post" novalidate>
+              <form id="form" method="post">
                 <label for="user-name">Username or email address *</label>
                 <input class="no-round-input" id="email" type="email" name="email" onfocusout="validateEmail()">
                 <span class="helper-text"></span>
@@ -325,7 +327,7 @@
                   <div class="account-forgot"><a href="javascript:void()">Forget your Password</a></div>
                 </div>
                 <div class="account-function">
-                  <a href="/index.html"><button class="no-round-btn" type="submit" onClick="myFunction()">Sign in</button></a><a class="create-account" href="register.html">Or create an account</a>
+                <button class="no-round-btn" type="submit">Sign in</button><a class="create-account" href="register.html">Or create an account</a>
                 </div>
               </form>
             </div>
