--- a/register.html
+++ b/register.html
@@ -276,7 +276,7 @@
    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 --> <script type="text/javascript" src="assets/js/materialize.min.js"></script>
     <script type="text/javascript" src="assets/js/materialize.js"></script>
-    <script type="text/javascript" src="assets/js/signup.js"></script>
+    <!--<script type="text/javascript" src="assets/js/signup.js"></script>-->
    
 
  
