--- a/login.html
+++ b/login.html
@@ -273,7 +273,11 @@
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
-    
+
+
+    <script type="text/javascript" src="assets/js/materialize.min.js"></script>
+    <script type="text/javascript" src="assets/js/materialize.js"></script>
+
 
     <script type="text/javascript" src="assets/js/login.js"></script>
 
