integrating user registration API

--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
                       </ul>
                     </li>
                    
-                    <li class="toggleable"> <a class="menu-item active" href="#">Pages</a>
+                    <li class="toggleable"> <a class="menu-item active" href="javascript:void()">Pages</a>
                       <ul class="sub-menu">
                         <li><a href="login.html">login</a></li>
                         <li><a href="register.html">register</a></li>
@@ -96,7 +96,7 @@
           <div class="container">
             <div class="row">
               <div class="col-3">
-                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="#"><i class="fas fa-bars"></i></a>
+                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="javascript:void()"><i class="fas fa-bars"></i></a>
                   <div id="ogami-mobile-menu">
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
@@ -106,38 +106,15 @@
                         </li>
                         <li class="toggleable"><a class="menu-item" href="shop_grid+list_3col.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
-                            <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
-                            <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                            <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                            <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
-                            <li><a href="shop_detail.html">shop detail</a></li>
-                            <li><a href="shop_detail_fullwidth.html">shop detail fullwidth</a></li>
-                            <li><a href="shop_checkout.html">checkout</a></li>
-                            <li><a href="shop_order_complete.html">order complete</a></li>
-                            <li><a href="shop_wishlist.html">wishlist</a></li>
-                            <li><a href="shop_compare.html">compare</a></li>
-                            <li><a href="shop_cart.html">cart</a></li>
-                          </ul>
+                           </ul>
                         </li>
-                        <li class="toggleable"> <a class="menu-item" href="blog_list_sidebar.html">Blog</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
-                          <ul class="sub-menu">
-                            <li><a href="blog_list_sidebar.html">Blog List Sidebar</a></li>
-                            <li><a href="blog_grid_2col.html">Blog Grid 2 column</a></li>
-                            <li><a href="blog_grid_sidebar.html">Blog Grid sidebar</a></li>
-                            <li><a href="blog_masonry.html">Blog masonry</a></li>
-                            <li><a href="blog_grid_1col.html">Blog Grid 1 column sidebar</a></li>
-                            <li><a href="blog_detail_sidebar.html">Blog detail sidebar</a></li>
-                          </ul>
-                        </li>
-                        <li class="toggleable"><a class="menu-item" href="#">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                          <li class="toggleable"><a class="menu-item" href="javascript:void()">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="login.html">login</a></li>
                             <li><a href="register.html">register</a></li>
                             <li><a href="faq.html">FAQ</a></li>
-                            <li><a href="coming_soon.html">coming soon</a></li>
-                            <li><a href="about_us.html">about us</a></li>
+                                 <li><a href="about_us.html">about us</a></li>
                             <li><a href="contact_us.html">contact us</a></li>
-                            <li><a href="404_error.html">404 error</a></li>
                           </ul>
                         </li>
                       </ul>
@@ -166,7 +143,7 @@
         <div class="container">
           <ul>
             <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
-            <li> <a class="breadcrumb-link active" href="#">Login</a></li>
+            <li> <a class="breadcrumb-link active" href="javascript:void()">Login</a></li>
           </ul>
         </div>
       </div>
@@ -186,7 +163,7 @@
                     <input id="savepass" type="checkbox">
                     <label for="savepass">Save Password</label>
                   </div>
-                  <div class="account-forgot"><a href="#">Forget your Password</a></div>
+                  <div class="account-forgot"><a href="javascript:void()">Forget your Password</a></div>
                 </div>
                 <div class="account-function">
                   <button class="no-round-btn" type="submit">Sign in</button><a class="create-account" href="register.html">Or create an account</a>
