--- a/login.html
+++ b/login.html
@@ -163,7 +163,9 @@
                     <input id="savepass" type="checkbox">
                     <label for="savepass">Save Password</label>
                   </div>
-                  <div class="account-forgot"><a href="forgetpassword.html">Forget your Password</a></div>
+
+                  <!--forget password-->
+                  <!--<div class="account-forgot"><a href="forgetpassword.html">Forget your Password</a></div>-->
                 </div>
                 <div class="account-function">
                   <button class="no-round-btn" type="submit">Sign in</button><a class="create-account" href="register.html">Or create an account</a>
