integrating user registration API

--- a/index.html
+++ b/index.html
@@ -1084,22 +1084,25 @@
 
 
 
+
+
+
           <div class="row">
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_1.png)">
                 <div class="categories-img"><img src="assets/images/homepage01/item_img_1.png" alt=""></div>
-                <h2>Fresh Fruit</h2>
+                <h2>BAKING INGREDIENTS</h2>
                 <p>4 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_2.png)">
                 <div class="categories-img"><img src="assets/images/homepage01/item_img_2.png" alt=""></div>
-                <h2>Fresh Fruit</h2>
+                <h2>FLOURS</h2>
                 <p>4 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_3.png)">
                 <div class="categories-img"><img src="assets/images/homepage01/item_img_3.png" alt=""></div>
-                <h2>Fresh Fruit</h2>
+                <h2>VEGETABLES/LEAFY</h2>
                 <p>4 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
                 <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
-                <h2>Fresh Fruit</h2>
+                <h2>TUBERS</h2>
                 <p>4 Items</p></a></div>
           </div>
         </div>
@@ -1121,7 +1124,7 @@
                   <div class="featured-use text-md-right">
                     <div class="featured-use_intro order-2 order-md-1">
                       <h5>Eat Healthier</h5>
-                      <p>Modi tempora incidunt ut labore dolore magnam aliquam</p>
+                      <p></p>
                     </div>
                     <div class="featured-use_icon text-md-right order-1 order-md-2 featured-use_icon-left">
                       <div class="icon-detail"><img src="assets/images/homepage01/dow_icon_1.png" alt=""></div>
@@ -1132,7 +1135,7 @@
                   <div class="featured-use text-md-right">
                     <div class="featured-use_intro order-2 order-md-1">
                       <h5>We Have Brands</h5>
-                      <p>Modi tempora incidunt ut labore dolore magnam aliquam</p>
+                      <p></p>
                     </div>
                     <div class="featured-use_icon text-md-right order-1 order-md-2 featured-use_icon-left">
                       <div class="icon-detail"><img src="assets/images/homepage01/dow_icon_2.png" alt=""></div>
@@ -1152,7 +1155,7 @@
                   <div class="featured-use">
                     <div class="featured-use_intro order-2">
                       <h5>Fresh And Clean Products</h5>
-                      <p>Modi tempora incidunt ut labore dolore magnam aliquam</p>
+                      <p></p>
                     </div>
                     <div class="featured-use_icon order-1 ml-0">
                       <div class="icon-detail"><img src="assets/images/homepage01/dow_icon_3.png" alt=""></div>
@@ -1163,7 +1166,7 @@
                   <div class="featured-use">
                     <div class="featured-use_intro order-2">
                       <h5>Modern Process</h5>
-                      <p>Modi tempora incidunt ut labore dolore magnam aliquam</p>
+                      <p></p>
                     </div>
                     <div class="featured-use_icon order-1 ml-0">
                       <div class="icon-detail"><img src="assets/images/homepage01/dow_icon_4.png" alt=""></div>
