integrating user registration API

--- a/index.html
+++ b/index.html
@@ -1089,21 +1089,70 @@
 
           <div class="row">
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_1.png)">
-                <div class="categories-img"><img src="assets/images/homepage01/item_img_1.png" alt=""></div>
+                <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c" alt=""></div>
                 <h2>BAKING INGREDIENTS</h2>
-                <p>4 Items</p></a></div>
+                <p>38 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_2.png)">
-                <div class="categories-img"><img src="assets/images/homepage01/item_img_2.png" alt=""></div>
+                <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FAyoola%20Poundo%20yam%20.jpg?alt=media&token=0ed5878b-a26c-4166-a0ab-fd4dfd7f54f5" alt=""></div>
                 <h2>FLOURS</h2>
-                <p>4 Items</p></a></div>
+                <p>10 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_3.png)">
                 <div class="categories-img"><img src="assets/images/homepage01/item_img_3.png" alt=""></div>
                 <h2>VEGETABLES/LEAFY</h2>
-                <p>4 Items</p></a></div>
+                <p>10 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
                 <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
                 <h2>TUBERS</h2>
-                <p>4 Items</p></a></div>
+                <p>36 Items</p></a></div>
+
+            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
+            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <h2>MEAT AND FISH/FISH</h2>
+            <p>24 Items</p></a></div>
+            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
+            <div>MEAT AND FISH/WHITE MEAT</h2>
+            <p>22 Items</p></a></div>
+            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
+            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <h2>CEREAL</h2>
+            <p>35 Items</p></a></div>
+            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
+            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <h2>GRAINS</h2>
+            <p>21 Items</p></a></div>
+
+            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
+            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <h2>SPICES</h2>
+            <p>22 Items</p></a></div>
+            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
+            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <h2>VEGETABLES/NON-LEAFY</h2>
+            <p>22 Items</p></a></div>
+
+            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <h2>BEVERAGES AND TEA</h2>
+            <p>24 Items</p></a></div>
+
+            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <h2>MEAT AND FISH/RED MEAT</h2>
+            <p>12 Items</p></a></div>
+
+            
+
+
+
+
+
+
+
+
+
+
+
+
+
+            
           </div>
         </div>
       </div>
