--- a/index.html
+++ b/index.html
@@ -1097,44 +1097,44 @@
                 <h2>FLOURS</h2>
                 <p>10 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_3.png)">
-                <div class="categories-img"><img src="assets/images/homepage01/item_img_3.png" alt=""></div>
+                <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBitter%20leaf.jpg?alt=media&token=e2a0f4d9-f66a-416e-bb51-8487de6d57cc" alt=""></div>
                 <h2>VEGETABLES/LEAFY</h2>
                 <p>10 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
-                <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+                <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCassava%202.jpg?alt=media&token=f87c5f65-09fb-4d8e-93b8-c6da10d8dd95" alt=""></div>
                 <h2>TUBERS</h2>
                 <p>36 Items</p></a></div>
 
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
-            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCat%20fish%202.jpg?alt=media&token=45ab4c02-4c40-4e87-b35e-aa42b9047de4" alt=""></div>
             <h2>MEAT AND FISH/FISH</h2>
             <p>24 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
             <div>MEAT AND FISH/WHITE MEAT</h2>
             <p>22 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
-            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FChicken%20breast.jpg?alt=media&token=2419b104-b7a0-4c83-b2b1-7a51176c8177" alt=""></div>
             <h2>CEREAL</h2>
             <p>35 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
-            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FGolden%20morn%20.jpg?alt=media&token=89bab744-e4ee-400d-a76a-0d156e9419d2" alt=""></div>
             <h2>GRAINS</h2>
             <p>21 Items</p></a></div>
 
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
-            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FJollof%20rice%20spice.jpg?alt=media&token=2f9bce54-05c0-4ed1-bf15-b11c891c50ad" alt=""></div>
             <h2>SPICES</h2>
             <p>22 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
-            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FOkra%202.jpg?alt=media&token=ae660423-eca8-4846-92d2-4baf693dc14a" alt=""></div>
             <h2>VEGETABLES/NON-LEAFY</h2>
             <p>22 Items</p></a></div>
 
-            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FYale%20biscuit.jpg?alt=media&token=2e732899-74ae-45be-b594-dfd86882d601" alt=""></div>
             <h2>BEVERAGES AND TEA</h2>
             <p>24 Items</p></a></div>
 
-            <div class="categories-img"><img src="assets/images/homepage01/item_img_4.png" alt=""></div>
+            <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCow%20meat.jpg?alt=media&token=02a3de16-4453-4c99-a977-9bef001a8618" alt=""></div>
             <h2>MEAT AND FISH/RED MEAT</h2>
             <p>12 Items</p></a></div>
 
