integrating user registration API

--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
             <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCat%20fish%202.jpg?alt=media&token=45ab4c02-4c40-4e87-b35e-aa42b9047de4" alt=""></div>
             <h2>MEAT AND FISH/FISH</h2>
             <p>24 Items</p></a></div>
-            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
+            <!--<div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
             <div>MEAT AND FISH/WHITE MEAT</h2>
             <p>22 Items</p></a></div>
             <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
@@ -1136,7 +1136,7 @@
 
             <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCow%20meat.jpg?alt=media&token=02a3de16-4453-4c99-a977-9bef001a8618" alt=""></div>
             <h2>MEAT AND FISH/RED MEAT</h2>
-            <p>12 Items</p></a></div>
+            <p>12 Items</p></a></div>-->
 
             
 
