integrating user registration API

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
                   <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
                  
-                  <div class="login d-flex"><a href="login.html"><i class="fas fa-user"></i>Login or Sign Up</a></div>
+                  <div class="login d-flex" id="loginflex"><a href="login.html"><i class="fas fa-user"></i>Login or Sign Up</a></div>
                 </div>
               </div>
             </div>
@@ -116,7 +116,7 @@
                         </li>
                       </ul>
                     </div>
-                    <div class="mobile-login">
+                    <div class="mobile-login" id="mobilelogin">
                       <h2>My account</h2><a href="login.html">Login</a><a href="register.html">Register</a>
                     </div>
                     <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
