integrating user registration API

--- a/shop.html
+++ b/shop.html
@@ -286,6 +286,10 @@
             <div class="col-xl-9">
               <div class="shop-grid-list">
                 <div class="shop-products">
+                <div id="root2">
+
+
+                </div>
                   <div class="shop-products_top mini-tab-title underline">
                     <div class="row align-items-center">
                       <div class="col-6 col-xl-4">
@@ -785,6 +789,13 @@
     <script src="assets/js/numscroller-1.0.js"></script>
     <script src="assets/js/vanilla-tilt.min.js"></script>
     <script src="assets/js/main.js"></script>
+
+    <script type="text/javascript" src="assets/js/Queryfoodlistingbycatgory.js"></script>
+   
+
+
+
+    
     <script></script>
   </body>
 </html>
