--- a/shop.html
+++ b/shop.html
@@ -309,8 +309,9 @@
                     </div>
                     <!--Using column-->
                   </div>
-                  <div class="shop-products_bottom">
-                    <div id="root2" class="product-item  d-flex flex-wrap">
+                  <div class="shop-products_bottom">              
+                      <div class="col-6 col-md-4">
+                        <div id="root2" class="product-item  d-flex flex-wrap">
 
 
                         </div>
