integrating user registration API

--- a/index.html
+++ b/index.html
@@ -1092,20 +1092,20 @@
                 <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c" alt=""></div>
                 <h2>BAKING INGREDIENTS</h2>
                 <p>38 Items</p></a></div>
-            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="assets/categoryQuery/shop1.html" style="background-image: url(assets/images/homepage01/item_category_2.png)">
+            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop1.html" style="background-image: url(assets/images/homepage01/item_category_2.png)">
                 <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FAyoola%20Poundo%20yam%20.jpg?alt=media&token=0ed5878b-a26c-4166-a0ab-fd4dfd7f54f5" alt=""></div>
                 <h2>FLOURS</h2>
                 <p>10 Items</p></a></div>
-            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="assets/categoryQuery/shop2.html" style="background-image: url(assets/images/homepage01/item_category_3.png)">
+            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop2.html" style="background-image: url(assets/images/homepage01/item_category_3.png)">
                 <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBitter%20leaf.jpg?alt=media&token=e2a0f4d9-f66a-416e-bb51-8487de6d57cc" alt=""></div>
                 <h2>VEGETABLES/LEAFY</h2>
                 <p>10 Items</p></a></div>
-            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="assets/categoryQuery/shop3.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
+            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop3.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
                 <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCassava%202.jpg?alt=media&token=f87c5f65-09fb-4d8e-93b8-c6da10d8dd95" alt=""></div>
                 <h2>TUBERS</h2>
                 <p>36 Items</p></a></div>
 
-            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="assets/categoryQuery/shop4.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
+            <div class="col-12 col-sm-6 col-md-3"><a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop4.html" style="background-image: url(assets/images/homepage01/item_category_4.png)">
             <div class="categories-img"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCat%20fish%202.jpg?alt=media&token=45ab4c02-4c40-4e87-b35e-aa42b9047de4" alt=""></div>
             <h2>MEAT AND FISH/FISH</h2>
             <p>24 Items</p></a></div>
