--- a/shop4.html
+++ b/shop4.html
@@ -290,7 +290,7 @@
                   <div class="shop-products_top mini-tab-title underline">
                     <div class="row align-items-center">
                       <div class="col-6 col-xl-4">
-                        <h2 class="title">Products</h2>
+                        <h2 class="title">MEAT AND FISH/FISH</h2>
                       </div>
                       <div class="col-6 text-right">
                         <div id="show-filter-sidebar">
